JumpScript/tests/baselines/reference/project/jsFileCompilationSameNameDtsNotSpecifiedWithAllowJs/amd/jsFileCompilationSameNameDtsNotSpecifiedWithAllowJs.errors.txt
error TS5055: Cannot write file 'SameNameDTsNotSpecifiedWithAllowJs/a.js' because it would overwrite input file.
  Adding a jmpconfig.json file will help organize projects that contain both JumpScript and JavaScript files. Learn more at https://aka.ms/jmpconfig.
SameNameDTsNotSpecifiedWithAllowJs/jmpconfig.json(1,24): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


!!! error TS5055: Cannot write file 'SameNameDTsNotSpecifiedWithAllowJs/a.js' because it would overwrite input file.
!!! error TS5055:   Adding a jmpconfig.json file will help organize projects that contain both JumpScript and JavaScript files. Learn more at https://aka.ms/jmpconfig.
==== SameNameDTsNotSpecifiedWithAllowJs/jmpconfig.json (1 errors) ====
    { "compilerOptions": { "allowJs": true } }
                           ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
==== SameNameDTsNotSpecifiedWithAllowJs/a.d.jump (0 errors) ====
    declare var a: number;
==== SameNameDTsNotSpecifiedWithAllowJs/a.js (0 errors) ====
    var test1 = 10; // Shouldnt get compiled